--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.9.1"
+    "babel-cli": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
