--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-polyfill": "^6.9.1"
   }
 }
