--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ddcesare/3scale-bot#readme",
   "dependencies": {
     "botkit": "^0.2.0",
+    "js-beautify": "^1.6.3",
     "moment": "^2.13.0"
   },
   "devDependencies": {
